# meetup-matcher

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  mlc_config.json  mypy.ini  noxfile.py  pyproject.toml  setup.cfg
.github/: config.yml
.github/workflows/: test.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
noteboks/: first.ipynb
src/introducer/: data.py  mails.py  main.py  matcher.py  pseudorandom.py  random.py  templating.py  test_matcher.py  test_pseudorandom.py  test_random.py
src/introducer/templates/: matched.txt.jinja  removed.txt.jinja
src/introducer/util/: log.py  test_log.py
src/meetupmatcher/: config.py  conftest.py  data.py  mails.py  main.py  matcher.py  pseudorandom.py  templating.py  test_integration.py  test_matcher.py  test_pseudorandom.py
src/meetupmatcher/config_files/: default_config.yaml
src/meetupmatcher/templates/: footnote.txt.jinja  matched.txt.jinja  removed.txt.jinja
src/meetupmatcher/test_data/: _availabilities.csv  availabilities.csv  availabilities.txt  availabilities.yaml  blank_fields.csv  blank_fields.txt  default.txt  out.txt  out_blank_fields.txt  out_renamed.txt  renamed.csv  renamed.txt  renamed.yaml  test.csv
src/meetupmatcher/util/: compat_resource.py  log.py  test_log.py
src/teatimematcher/: data.py  main.py  templating.py  test_matcher.py  test_pseudorandom.py
src/teatimematcher/templates/: matched.txt.jinja
src/teatimematcher/util/: log.py  test_log.py
