[metadata]
name = meetup_matcher
version = file: src/meetupmatcher/version.txt
description = Randomly match small groups of people to have tea together!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klieret/meetup-matcher
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
license = MIT
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker =   https://github.com/klieret/meetup-matcher/issues
    Source Code =   https://github.com/klieret/meetup-matcher
python_requires = >=3.8

[options]
packages = find:
install_requires =
    click
    colorlog
    jinja2
    numpy
    pandas
    pyyaml
    yagmail
    importlib-resources;python_version < "3.9.0"
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    meetup-matcher = meetupmatcher.main:main

[options.extras_require]
testing =
    pytest
    pytest-coverage
